WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25618
fix a leak in V8EventListenerList::remove
https://bugs.webkit.org/show_bug.cgi?id=25618
Summary
fix a leak in V8EventListenerList::remove
Antony Sargent
Reported
2009-05-07 10:30:58 PDT
The vector wasn't getting deleted by the call to HashMap::remove.
Attachments
patch
(1.30 KB, patch)
2009-05-07 10:33 PDT
,
Antony Sargent
fishd
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antony Sargent
Comment 1
2009-05-07 10:33:05 PDT
Created
attachment 30102
[details]
patch
Darin Fisher (:fishd, Google)
Comment 2
2009-05-07 10:42:41 PDT
Comment on
attachment 30102
[details]
patch LGTM
Darin Fisher (:fishd, Google)
Comment 3
2009-05-07 10:45:33 PDT
Landed as:
http://trac.webkit.org/changeset/43348
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug