2009-05-07  Antony Sargent  <asargent@chromium.org>

Reviewed by Darin Fisher.

        Fix a memory leak in V8EventListenerList::remove.

        https://bugs.webkit.org/show_bug.cgi?id=25618

        No new functionality so no new tests.

        * bindings/v8/V8EventListenerList.cpp:
        (WebCore::V8EventListenerList::remove):



Canonical link: https://commits.webkit.org/35371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43348 268f45cc-cd09-0410-ab3c-d52691b4dbfc